# Template-Website

./: .dockerignore  DESIGN.md  README.md  app.py  docker-compose-dev.yml  make_migrations.sh  migrate.sh  piccolo_conf.py  piccolo_conf_test.py  pyproject.toml
api_client_impls/: alerts.py  order_by_testing.py
docker/saq/: Dockerfile  entrypoint.sh
home/: constants.py  endpoints.py  exception_handlers.py  piccolo_app.py
home/controllers/: auth_controller.py  oauth_controller.py
home/crud/: controller.py
home/guards/: api_checks.py
home/middleware/: ensure_auth.py
home/piccolo_migrations/: home_2025_07_06t23_22_19_851956.py  home_2025_07_13t20_24_30_344602.py  home_2025_10_25t12_38_22_313094.py  home_2025_10_25t12_57_09_221626.py  home_2025_10_25t16_22_47_928419.py  home_2025_10_25t16_38_47_975867.py  home_2025_10_25t16_43_14_679295.py  home_2025_10_25t16_52_27_095317.py  home_2025_10_25t17_17_49_086135.py  home_2025_10_25t17_26_00_113071.py  home_2025_10_25t17_42_39_127824.py  home_2025_10_26t16_38_07_016474.py  home_2025_10_26t16_54_11_783106.py  home_2025_10_27t13_31_08_066636.py  home_2025_11_02t16_42_17_465514.py  home_2025_11_02t18_10_32_361764.py
home/saq/: worker.py
home/tables/: __init__.py  alerts.py  api_tokens.py  authentication_attempt.py  magic_links.py  oauth_entry.py  profile.py  user.py
home/templates/: base.jinja  home.jinja  sidebar.jinja
home/util/: email.py  flash.py  get_csp.py  html_template.py
template/: admin_portal.py  constants.py  endpoints.py  exception_handlers.py  piccolo_app.py
template/controllers/: auth_controller.py  oauth_controller.py
template/crud/: client.py  controller.py
tests/: conftest.py  test_auth_token_flow.py  test_crud_base.py  test_session_base.py
(+36 files in other folders)
